--- a/dashboard.css
+++ b/dashboard.css
@@ -10,7 +10,7 @@
   position: fixed;
   height: 100%;
   width: 240px;
-  background: #0A2558;
+  background: #facd17;
   transition: all 0.5s ease;
 }
 .sidebar.active{
@@ -50,10 +50,10 @@
   transition: all 0.4s ease;
 }
 .sidebar .nav-links li a.active{
-  background: #081D45;
+  background: #000000;
 }
 .sidebar .nav-links li a:hover{
-  background: #081D45;
+  background: #000000;
 }
 .sidebar .nav-links li i{
   min-width: 60px;
@@ -124,7 +124,7 @@ nav .search-box input{
   height: 100%;
   width: 100%;
   outline: none;
-  background:yellow;
+  background:#ffffff;
   border: 2px solid #EFEEF1;
   border-radius: 6px;
   font-size: 18px;
@@ -299,7 +299,7 @@ nav .profile-details i{
 }
 .sales-boxes .box .button a{
   color: #fff;
-  background: #0A2558;
+  background: #facd17;
   padding: 4px 12px;
   font-size: 15px;
   font-weight: 400;
