--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@
     background-color: #000000; /*for styling id in css we must use "#"*/
     padding:  2% 0 3.7%;
 }
+#lastdiv{
+  border-bottom:2px solid;
+}
 #mainlogoleft{
     height: 70px;
     width: 100%;
@@ -224,6 +227,15 @@ p{
 /* .icon-feature2{
     padding-top:0px;
 } */
+/* #hrl{
+  border:1px solid black;
+} */
+
+#prb{
+  background-color: black;
+  /* margin-top: 30px; */
+  /* margin-bottom: 30px; */
+}
 .new{
     padding-bottom:0%;
     font-size:2.5rem;
